; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_init.c_establish_signal_handlers.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_init.c_establish_signal_handlers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { void (i32)*, i32, i64 }

@SIGUSR1 = common dso_local global i32 0, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @establish_signal_handlers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @establish_signal_handlers() #0 {
  %1 = alloca %struct.sigaction, align 8
  %2 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 0
  store void (i32)* @sigusr1_handler, void (i32)** %2, align 8
  %3 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 2
  store i64 0, i64* %3, align 8
  %4 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 1
  %5 = call i32 @sigemptyset(i32* %4)
  %6 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %1, i32 0, i32 1
  %7 = load i32, i32* @SIGUSR1, align 4
  %8 = call i32 @sigaddset(i32* %6, i32 %7)
  %9 = load i32, i32* @SIGUSR1, align 4
  %10 = call i32 @sigaction(i32 %9, %struct.sigaction* %1, i32* null)
  %11 = load i32, i32* @SIGPIPE, align 4
  %12 = load i32, i32* @SIG_IGN, align 4
  %13 = call i32 @signal(i32 %11, i32 %12)
  ret void
}

declare dso_local void @sigusr1_handler(i32) #1

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaddset(i32*, i32) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32*) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
